--- a/Money/angular.json
+++ b/Money/angular.json
@@ -68,7 +68,8 @@
               "browserTarget": "Money:build:production"
             },
             "development": {
-              "browserTarget": "Money:build:development"
+              "browserTarget": "Money:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
